--- a/A3/eventPageOwner.html
+++ b/A3/eventPageOwner.html
@@ -195,42 +195,28 @@
         <aside class="col-lg-7 col-12 ">
             <hr>
             <div class="infoEvent sticky-top">
-                <div class="row" >
-                    <div class="col-md-6 col-12  d-flex justify-content-center">
-                        <h3>Concerto Mega Fixe</h3>
-                    </div>
-                    <div class="col-md-6 col-12 d-flex justify-content-center align-items-center">
-                        <button class="btn btn-success" type="button" title="Accept">
-                            <i class="fas fa-check"></i>
-                        </button>
-                        <button class="btn btn-danger" type="button" title="Reject">
-                            <i class="fas fa-times"></i>
-                        </button>
+                <h3>Concerto Mega Fixe</h3>
+                <hr>
+                <div class="container-fluid">
+                    <div class="d-flex justify-content-start">
+                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#Invite">Invite Users</button>
+                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#participants">Participants</button>
                     </div>
                 </div>
                 <hr>
                 <h6>17/02/2018</h6>
-                <p>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                </p>
-                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#participants">Participants</button>
-                <button type="button" class="btn btn-default" data-toggle="modal">Edit</button>
-                <hr>
-                <h5>Rating</h5>
-                <div class="star-rating">
-                    <span class="far fa-star" data-rating="1"></span>
-                    <span class="far fa-star" data-rating="2"></span>
-                    <span class="far fa-star" data-rating="3"></span>
-                    <span class="far fa-star" data-rating="4"></span>
-                    <span class="far fa-star" data-rating="5"></span>
-                    <input type="hidden" name="rating" class="rating-value" value="4">
+                <textarea placeholder="Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+" rows="3" class="form-control"></textarea>
+                <button class="btn btn-primary" type="button"><i class="fas fa-pencil-alt"></i> Edit</button>
+
+                <div class="d-flex justify-content-end" >
+                    <button type="button" class="btn btn-danger " data-toggle="tooltip" data-placement="left" title="Delete Event"><i class="fas fa-trash-alt"></i></button>
                 </div>
                 <hr>
                 <h6>Porto, Portugal</h6>
                 <div class="map-responsive">
                     <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Porto+Portugal" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
-
             </div>
         </aside>
         <main class="col-lg-5 col-12 discussionEvent">
@@ -287,8 +273,6 @@
                                     <p>Really?? Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat.
                                     </p>
                                 </div>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" ><i class="ion-edit"></i>Edit</a>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" ><i class="ion-trash-a"></i>Delete</a>
                             </div>
                         </div>
                         <textarea placeholder="Write your post here!" class="pb-cmnt-textarea col-12 "></textarea>
@@ -352,7 +336,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <a class="" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample"><i class="ion-reply"></i>More</a>
+                        <a class="" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample">More</a>
                     </div>
                 </div>
                 <div class="collapse col-12" id="collapseExample3">
@@ -367,8 +351,6 @@
                                     <p>Really?? Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat.
                                     </p>
                                 </div>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" >Edit</a>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" >Delete</a>
                             </div>
                         </div>
                         <div class="row">
@@ -381,8 +363,6 @@
                                     <p>Really?? Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat.
                                     </p>
                                 </div>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" >Edit</a>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" >Delete</a>
                             </div>
                         </div>
                         <textarea placeholder="Write your post here!" class="pb-cmnt-textarea col-12 "></textarea>
@@ -392,17 +372,15 @@
             </div>
             <div class="comment mb-2 row">
                 <div class="comment-avatar col-md-2 col-3 text-center pr-1">
-                    <img class="mx-auto rounded-circle img-fluid" src="http://demos.themes.guide/bodeo/assets/images/users/m101.jpg" alt="avatar">
+                    <img class="mx-auto rounded-circle img-fluid" src="./imgs/maku.jpg" alt="avatar">
                 </div>
                 <div class="comment-content  col-md-10 col-9">
-                    <h6 class="small comment-meta"><a href="#">phildownney</a> Today, 12:31</h6>
+                    <h6 class="small comment-meta"><a href="#">admin</a> Today, 2:38</h6>
                     <div class="comment-body">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <a href>http://wwwwww.com</a> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
                             <br>
                             <a class="" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">More</a>
-                            <a class="pl-4"  href="#" role="button" aria-expanded="false" >Edit</a>
-                            <a class="pl-4"  href="#" role="button" aria-expanded="false" >Delete</a>
                         </p>
                     </div>
                 </div>
@@ -410,13 +388,12 @@
                     <div class="comment-reply col-11 offset-1 ">
                         <div class="row">
                             <div class="comment-avatar col-md-2 col-3 text-center pr-1">
-                                <a href=""><img class="mx-auto rounded-circle img-fluid" src="./imgs/maku.jpg" alt="avatar"></a>
+                                <a href=""><img class="mx-auto rounded-circle img-fluid" src="http://demos.themes.guide/bodeo/assets/images/users/m101.jpg" alt="avatar"></a>
                             </div>
                             <div class="comment-content  col-md-10 col-9">
-                                <h6 class="small comment-meta"><a href="#">admin</a> Today, 2:38</h6>
+                                <h6 class="small comment-meta"><a href="#">phildownney</a> Today, 12:31</h6>
                                 <div class="comment-body">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <a href>http://wwwwww.com</a> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+                                    <p>Really?? Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat.
                                     </p>
                                 </div>
                             </div>
@@ -431,8 +408,6 @@
                                     <p>Really?? Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat.
                                     </p>
                                 </div>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" >Edit</a>
-                                <a class="pl-4"  href="#" role="button" aria-expanded="false" >Delete</a>
                             </div>
                         </div>
                         <textarea placeholder="Write your post here!" class="pb-cmnt-textarea col-12 "></textarea>
@@ -443,11 +418,38 @@
         </main>
     </div>
 
-    <div class="modal fade" id="participants" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="participants" tabindex="-1" role="dialog" aria-labelledby="participantsModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Participants</h5>
+                    <h5 class="modal-title" id="participantsModal">Participants</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="jumbotron p-1 mb-1">
+                        <div class="row">
+                            <div class="col-md-3 col-3">
+                                <img src="./imgs/cervi.png" class="img-fluid rounded imgMember" alt="Cinque Terre">
+                            </div>
+                            <div class="col-md-9 col-9">
+                                <h3>FrancoCervi</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="Invite" tabindex="-1" role="dialog" aria-labelledby="inviteModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="inviteModal">Invite Users</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -455,31 +457,27 @@
                 <div class="modal-body">
                     <div class="jumbotron p-1 mb-1 mt-1">
                         <div class="row">
-                            <div class="col-md-3 col-3">
-                                <img src="./imgs/jonas.png" class="img-fluid rounded" alt="Cinque Terre">
+                            <div class="col-md-3  col-3">
+                                <img src="./imgs/jonas.png" class="img-fluid mx-auto rounded imgMember" alt="Cinque Terre">
                             </div>
-                            <div class="col-md-9 col-9">
+                            <div class="col-md-7 col-7">
                                 <h3>JonasGoncalves</h3>
                             </div>
-                        </div>
-                    </div>
-                    <div class="jumbotron p-1 mb-1">
-                        <div class="row">
-                            <div class="col-md-3 col-3">
-                                <img src="./imgs/cervi.png" class="img-fluid rounded" alt="Cinque Terre">
-                            </div>
-                            <div class="col-md-9 col-9">
-                                <h3>FrancoCervi</h3>
+                            <div class="col-md-2 col-2 d-flex align-items-center">
+                                <button type="button" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="left" title="Invite"><i class="fas fa-plus"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="jumbotron p-1">
                         <div class="row">
                             <div class="col-md-3 col-3">
-                                <img src="./imgs/aalmeida.png" class="img-fluid rounded" alt="Cinque Terre">
+                                <img src="./imgs/aalmeida.png" class="img-fluid rounded imgMember" alt="Cinque Terre">
                             </div>
-                            <div class="col-md-9 col-9">
+                            <div class="col-md-7 col-7">
                                 <h3>AndreAlmeida</h3>
+                            </div>
+                            <div class="col-md-2 col-2 d-flex align-items-center">
+                                <button type="button" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="left" title="Invite" ><i class="fas fa-plus"></i></button>
                             </div>
                         </div>
                     </div>
